--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.1.0",
     "react-toastify": "^11.0.5"
   },
   "scripts": {
